--- a/views/home.ejs
+++ b/views/home.ejs
@@ -417,7 +417,7 @@
 
             async function logout() {
                 try {
-                    const response = await fetch('/api/loogut', {
+                    const response = await fetch('/api/logout', {
                         method: 'POST',
                         headers: {
                             'Authorization': 'Bearer ' + token,
